--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
@@ -79,11 +79,11 @@
     <Filter Include="Shaders\Lighting">
       <UniqueIdentifier>{8b626847-c6f5-4083-89ac-81878a1bf0cc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Materials">
-      <UniqueIdentifier>{a28c58ad-fe00-4b8d-9c02-4f9377f18793}</UniqueIdentifier>
+    <Filter Include="Assets">
+      <UniqueIdentifier>{89494732-8570-42fc-9e4f-45427f75e556}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Material">
-      <UniqueIdentifier>{e49e0e2d-dccc-4a67-9a6d-0c2c87dd162a}</UniqueIdentifier>
+    <Filter Include="Assets\Materials">
+      <UniqueIdentifier>{60d3db6c-6340-4eee-b82f-f30610c7fe41}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -189,9 +189,6 @@
     <ClCompile Include="PointLight.cpp">
       <Filter>Source Files\Lights</Filter>
     </ClCompile>
-    <ClCompile Include="Mesh.cpp">
-      <Filter>Source Files\Drawable</Filter>
-    </ClCompile>
     <ClCompile Include="Vertex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -201,8 +198,11 @@
     <ClCompile Include="Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MeshRenderer.cpp">
+      <Filter>Source Files\Drawable</Filter>
+    </ClCompile>
     <ClCompile Include="Material.cpp">
-      <Filter>Source Files\Material</Filter>
+      <Filter>Source Files\Bindable</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -353,9 +353,6 @@
     <ClInclude Include="PixelConstantBuffer.h">
       <Filter>Header Files\Bindable\Buffers</Filter>
     </ClInclude>
-    <ClInclude Include="Mesh.h">
-      <Filter>Header Files\Drawable</Filter>
-    </ClInclude>
     <ClInclude Include="FBXImporter.h">
       <Filter>Header Files\FBXImporter</Filter>
     </ClInclude>
@@ -404,8 +401,11 @@
     <ClInclude Include="BindableCodex.h">
       <Filter>Header Files\Bindable</Filter>
     </ClInclude>
+    <ClInclude Include="MeshRenderer.h">
+      <Filter>Header Files\Drawable</Filter>
+    </ClInclude>
     <ClInclude Include="Material.h">
-      <Filter>Header Files\Materials</Filter>
+      <Filter>Header Files\Bindable</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -437,6 +437,9 @@
     <None Include="Shaders\Lighting\BRDF.hlsli" />
     <None Include="Shaders\PhongCommon.hlsli">
       <Filter>Shaders</Filter>
+    </None>
+    <None Include="Assets\Materials\TestMaterial.asset">
+      <Filter>Assets\Materials</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
