--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -276,6 +276,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Materials\TestMaterial.asset" />
+    <None Include="Assets\Materials\LightMaterial.asset" />
     <None Include="Shaders\PhongCommon.hlsli" />
     <None Include="Shaders\Lighting\Diffuse.hlsli" />
     <None Include="DXGetErrorDescription.inl" />
