--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -186,6 +186,7 @@
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Material.cpp" />
+    <ClCompile Include="MaterialPass.cpp" />
     <ClCompile Include="MeshRenderer.cpp" />
     <ClCompile Include="ModelInstance.cpp" />
     <ClCompile Include="Mouse.cpp" />
@@ -250,6 +251,7 @@
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="Material.h" />
+    <ClInclude Include="MaterialPass.h" />
     <ClInclude Include="MeshRenderer.h" />
     <ClInclude Include="MeshAsset.h" />
     <ClInclude Include="ModelAsset.h" />
