--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -259,6 +259,7 @@
     <ClInclude Include="ModelInstanceUtil.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="NullPixelShader.h" />
+    <ClInclude Include="TextParser.h" />
     <ClInclude Include="Pass.h" />
     <ClInclude Include="PixelConstantBuffer.h" />
     <ClInclude Include="PixelShader.h" />
@@ -296,8 +297,9 @@
     <Image Include="icon1.ico" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Materials\TestMaterial.asset" />
+    <None Include="Assets\Materials\HeadMaterial.asset" />
     <None Include="Assets\Materials\LightMaterial.asset" />
+    <None Include="Assets\Models\Head.asset" />
     <None Include="Shaders\PhongCommon.hlsli" />
     <None Include="Shaders\Lighting\Diffuse.hlsli" />
     <None Include="DXGetErrorDescription.inl" />
