--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -181,7 +181,7 @@
     <ClCompile Include="Imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
     <ClCompile Include="InputLayout.cpp" />
-    <ClCompile Include="Job.cpp" />
+    <ClCompile Include="RenderJob.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -193,9 +193,10 @@
     <ClCompile Include="NullPixelShader.cpp" />
     <ClCompile Include="PixelShader.cpp" />
     <ClCompile Include="PointLight.cpp" />
+    <ClCompile Include="RasterizerState.cpp" />
     <ClCompile Include="RenderTarget.cpp" />
     <ClCompile Include="Sampler.cpp" />
-    <ClCompile Include="Step.cpp" />
+    <ClCompile Include="RenderStep.cpp" />
     <ClCompile Include="Surface.cpp" />
     <ClCompile Include="Technique.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -247,7 +248,7 @@
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="IndexedTriangleList.h" />
     <ClInclude Include="InputLayout.h" />
-    <ClInclude Include="Job.h" />
+    <ClInclude Include="RenderJob.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="Material.h" />
@@ -259,8 +260,9 @@
     <ClInclude Include="ModelInstanceUtil.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="NullPixelShader.h" />
+    <ClInclude Include="RasterizerState.h" />
     <ClInclude Include="TextParser.h" />
-    <ClInclude Include="Pass.h" />
+    <ClInclude Include="RenderPass.h" />
     <ClInclude Include="PixelConstantBuffer.h" />
     <ClInclude Include="PixelShader.h" />
     <ClInclude Include="Plane.h" />
@@ -272,7 +274,7 @@
     <ClInclude Include="SceneGraphNode.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="Stencil.h" />
-    <ClInclude Include="Step.h" />
+    <ClInclude Include="RenderStep.h" />
     <ClInclude Include="Surface.h" />
     <ClInclude Include="Technique.h" />
     <ClInclude Include="Texture.h" />
